test/corpus/declarations.txt
==================
Let Declaration without Initializer
==================
let int count;
let string name;

---

(source_file
  (let_declaration
    type: (simple_type)
    name: (identifier))
  (let_declaration
    type: (simple_type)
    name: (identifier)))


==================
Let Declaration with Initializer
==================
let int score = 100;
let bool isActive = true;
let float pi = 3.14159;

---

(source_file
  (let_declaration
    type: (simple_type)
    name: (identifier)
    value: (expression
        (int_literal)))
  (let_declaration
    type: (simple_type)
    name: (identifier)
    value: (expression
        (bool_literal
          (true))))
  (let_declaration
    type: (simple_type)
    name: (identifier)
    value: (expression
        (float_literal))))
