test/corpus/if_statements.txt
==================
If Statement with Return inside Codeblock
==================
if (x == 5) {
  return x;
};

---

(source_file
  (if_statement
    condition: (parenthesized_boolean_expression
      (boolean_expression
        (identifier)
        (expression
          (int_literal))))
    consequence: (code_block
      (statement_list
        (return_statement
          (expression
            (identifier)))))))

==================
If Else Statement with Assignments
==================
if (count >= 10) {
  count = 0;
} else {
  count = count;
};

---

(source_file
  (if_statement
    condition: (parenthesized_boolean_expression
      (boolean_expression
        (identifier)
        (expression
          (int_literal))))
    consequence: (code_block
      (statement_list
        (assignment_statement
          (identifier)
          (expression
            (int_literal)))))
    alternative: (code_block
      (statement_list
        (assignment_statement
          (identifier)
          (expression
            (identifier)))))))

==================
Comparison Operators in Boolean Expressions
==================
if (a < b) {
  let bool res = true;
};
if (a <= b) {
  let bool res = true;
};
if (a > b) {
  let bool res = true;
};

---

(source_file
  (if_statement
    condition: (parenthesized_boolean_expression
      (boolean_expression
        (identifier)
        (identifier)))
    consequence: (code_block
      (statement_list
        (let_declaration
          type: (simple_type)
          name: (identifier)
          value: (expression
            (bool_literal
              (true)))))))
  (if_statement
    condition: (parenthesized_boolean_expression
      (boolean_expression
        (identifier)
        (identifier)))
    consequence: (code_block
      (statement_list
        (let_declaration
          type: (simple_type)
          name: (identifier)
          value: (expression
            (bool_literal
              (true)))))))
  (if_statement
    condition: (parenthesized_boolean_expression
      (boolean_expression
        (identifier)
        (identifier)))
    consequence: (code_block
      (statement_list
        (let_declaration
          type: (simple_type)
          name: (identifier)
          value: (expression
            (bool_literal
              (true))))))))
